--- a/src/components/ContactIcons/ContactIcons.css
+++ b/src/components/ContactIcons/ContactIcons.css
@@ -1,8 +1,9 @@
 .contact a {
-    margin-right: 20px;
-    height: fit-content;
+	margin-right: 20px;
+	height: fit-content;
+	background-color: #f9fafc;
 }
 
 .contact img {
-    height: 50px;
+	height: 50px;
 }
