--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
-	font-family: -apple-system,BlinkMacSystemFont,Omnes,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,
-	Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, Omnes, Segoe UI, Roboto,
+		Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+		sans-serif;
 }
 
 .body {
@@ -10,8 +11,7 @@ body {
 }
 
 .content {
-	grid-column: 2 / 3;
+	/* grid-column: 2 / 3;
 	display: grid;
-	grid-row-gap: 100px;
+	grid-row-gap: 100px; */
 }
-
