--- a/src/sections/Experiences/Experiences.css
+++ b/src/sections/Experiences/Experiences.css
@@ -1,4 +1,9 @@
-.experience > h1 {
+.experiences {
+	grid-column: 2 / 3;
+	margin-top: 100px;
+}
+
+.experiences > h1 {
 	font-size: 60px;
 	margin: 100px auto;
 	width: fit-content;
