--- a/src/components/ExperienceCard/ExperienceCard.css
+++ b/src/components/ExperienceCard/ExperienceCard.css
@@ -1,6 +1,7 @@
 .experience-card {
 	padding: 2vw 5vw;
 	margin-top: 80px;
+	margin-bottom: 40px;
 
 	border-radius: 20px;
 	box-shadow: 1px 1px 15px 0px grey;
@@ -27,6 +28,7 @@
 
 .experience-card .time-place p {
 	display: inline-block;
+	margin-top: 0;
 }
 
 .experience-card .time-place .place {
@@ -39,7 +41,7 @@
 }
 
 .experience-card .detail-list li {
-	margin-top: 10px;
+	margin-top: 0px;
 	font-size: 20px;
 }
 
